# godfishbot-ng

./: .envrc  Cargo.toml  Dockerfile  Justfile  flake.nix
res/sound/: eeyup.opus  gasp.opus  ululu.opus
res/txt/: explode.txt  explode_single.txt  hugs.txt  kiss.txt
src/: bot.rs  doggo.rs  flausch.rs  love_test.rs  main.rs
